# materialized-enchancements

./: .env.example  .env.template  .gitignore  AGENTS.md  CLAUDE.md  README.md  animals_phylopic.md  main.py  merged_gene_enhancement_library.csv  presentation_draft.md  pyproject.toml  rxconfig.py
.cursor/hooks/state/: continual-learning-index.json  continual-learning.json
.githooks/: pre-commit
assets/: llms.txt  robots.txt  sitemap.xml
assets/jigsaw/: index.html
assets/sculpture_viewer/: capture.html  index.html
data/input/: gene_library.csv  gene_library_extended.csv  gene_properties.csv  gene_properties_extended.csv  gene_species.csv  gene_testing.csv  organism_properties.csv  sculpture_mapping_spec.md  species.csv
docs/: ARTEX_INTEGRATION.md  artex_venue_integration_c80bfeab.plan.md
src/materialized_enhancements/: app.py  artex.py  crawler_assets.py  email_send.py  env.py  gene_data.py  jigsaw_stl.py  materialized_enhancements.py  puzzle.py  run.py  sculpture.py  state.py
src/materialized_enhancements/components/: jigsaw.py  layout.py
src/materialized_enhancements/pages/: compose.py  index.py
tests/: conftest.py  dump_stl_diagnostics.py  test_artex.py  test_artex_integration.py  test_artex_visibility.py  test_cell_filter_fix.py  test_crawler_assets.py  test_extrusion_hypothesis.py  test_jigsaw_stl.py  test_per_cell_hypothesis.py  test_puzzle_organisms.py  test_sculpture_combos.py  test_sculpture_pipeline.py  test_stl_to_gcode.py
tools/: analyze_failures.py  analyze_failures_deep.py  sculpture_param_histogram.py
