[project]
name = "materialized-enhancements"
version = "0.1.0"
description = "Materialized Enhancements — an art+tech hackathon project exploring gene enhancements as generative art"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "reflex>=0.8.27",
  "granian>=2.7.1",
  "polars>=1.0.0",
  "pydantic>=2.0.0",
  "reflex-mui-datagrid>=0.1.10",
]

[project.scripts]
start = "materialized_enhancements.run:main"

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "ruff>=0.9.0",
]
