[project]
name = "materialized-enhancements"
version = "0.2.5"
description = "Materialized Enhancements — an art+tech hackathon project exploring gene enhancements as generative art"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "reflex>=0.8.27",
  "granian>=2.7.1",
  "polars>=1.0.0",
  "pydantic>=2.0.0",
  "reflex-mui-datagrid>=0.2.3",
  "compass-web>=0.2.3",
  "dotenv>=0.9.9",
  "pillow>=12.2.0",
]

[project.scripts]
start = "materialized_enhancements.run:main"

[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "matplotlib>=3.10.8",
  "pytest>=9.0.2",
  "ruff>=0.9.0",
]
